India map image updated  and fixed  alignment of image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ html{
 }
 .menu-header .navbar-nav li a{
     font-size: 15px;
-    color: #434141;
+    color: #434141 !important;
     padding-right: 20px !important;
     padding-left: 20px !important;
 }
@@ -159,8 +159,14 @@ html{
     .key-img{
         display: none;
     }
+    .country-flag {
+        margin-left: 0;
+    }
+    .key-img{
+        display: none !important;
+    }
 }
-@media (min-width:576px) and (max-width:768px){
+@media (min-width:576px) and (max-width:991px){
     .nat-text-tab{
         font-size: 20px;
     }
@@ -184,9 +190,15 @@ html{
     }
     .footer-img img{
         max-width: 85%;
+        margin: 0 auto;
+        display: block;
     }
     .section-padding {
         padding: 20px 0;
+    }
+    .misstion-visstion img{
+        display: block;
+        margin: 10px auto;
     }
 }
 @media (max-width:376px){
@@ -197,11 +209,11 @@ html{
         margin-left: -37px;
     }
 }
-@media (min-width:1024px) and (max-width:1440px){
+/* @media (min-width:1024px) and (max-width:1440px){
     .key-img{
         max-width: 85%;
     }
-}
+} */
 /* about page */
 .head-title{
     margin-bottom: 1.5rem;
@@ -213,11 +225,8 @@ html{
     font-family: 'Outfit';
 }
 .about-sec p{
-    line-height: 36px;
+    line-height: 26px;
     text-align: justify;
-}
-.contact-sec p{
-    line-height: 36px;
 }
 .cont-detail span{
     font-size: 15px;
@@ -262,18 +271,17 @@ html{
 }
 .key-ben-box::before{
     position: absolute;
-    content: '';
+    content: ' ';
     height: 100%;
     width: 12px;
     left: 0;
-    top: 0;
-    
+    top: 0; 
 }
 .key-ben-box ul li{
     position: relative;
     font-size: 14px;
     font-weight: 500;
-    line-height: 21px;
+    line-height: 18px;
     padding-left: 20px;
     list-style: none;
     margin-bottom: 0.2rem;
@@ -300,7 +308,7 @@ html{
     height: 12px;
     width: 12px;
     position: absolute;
-    content: '.';
+    content: ' ';
     left: 0;
     border-radius: 50%;
     top: 7px;
@@ -325,4 +333,65 @@ html{
 }
 .key-mob-img, .key-tab-img{
     display: none;
+}
+.key-img{
+    height: 900px;
+}
+/* new css */
+.col-cust-height{
+    min-height: 923px;
+}
+.key-ben-box.cust-lh ul li{
+    line-height: 20px;
+}
+
+/* @media (max-width:1198px){
+    
+    .key-img{
+        display: none;
+    }
+} */
+@media (min-width: 1199.98px) and (max-width:1025px){
+    /* .key-img{
+        display: none !important;
+    } */
+    /* .key-lg-img{
+        display: block !important;
+    } */
+}
+@media (min-width: 1026px){
+    /* .key-img{
+        display: block !important;
+        margin-top: 22px;
+    } */
+    /* .key-lg-img{
+        display: none !important;
+    } */
+}
+@media (max-width:1023px){
+    .key-img{
+        display: none;
+    }
+}
+@media (max-width:320px){
+    .navbar-brand img {
+        max-width: 60%;
+    }
+    .nat-text-tab {
+        margin-left: -52px;
+    }
+    .navbar-light .navbar-toggler {
+        font-size: 0.8rem;
+    }
+    .nat-text {
+        font-size: 10px;
+    }
+}
+.key-img{
+   display: block;
+}
+@media (min-width: 768px) and (max-width: 991.98px){
+    .key-img{
+        display: none !important;
+    }
 }
